--- a/packages/host/index.html
+++ b/packages/host/index.html
@@ -13,15 +13,15 @@
     </style>
 </head>
 
-<body>
+<body class="chartifact-body">
 
-    <header id="toolbar"></header>
+    <header class="chartifact-toolbar"></header>
 
-    <main>
+    <main class="chartifact-main">
 
-        <textarea id="textarea" style="display: none;" placeholder="Enter your markdown here..."></textarea>
+        <textarea class="chartifact-source" id="source" style="display: none;" placeholder="Enter your markdown here..."></textarea>
 
-        <div id="app"></div>
+        <div class="chartifact-preview" id="preview"></div>
 
         <div id="loading" style="text-align: center; padding: 50px;">
             Loading...
