--- a/packages/vscode-resources/html/preview.html
+++ b/packages/vscode-resources/html/preview.html
@@ -25,12 +25,12 @@
     {{HOST_OPTIONS}}
 
 </head>
-<body>
+<body class="chartifact-body">
     <div id="loading" style="text-align: center; padding: 50px;">
         Loading...
     </div>
 
-	<div id="app"></div>
+	<div class="chartifact-preview" id="preview"></div>
 
 </body>
 </html>
