--- a/packages/markdown/index.html
+++ b/packages/markdown/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5.29.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
     <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mermaid@10.9.0/dist/mermaid.min.js"></script>
 
     <style>
         #markdown-input {
