--- a/packages/markdown/index.html
+++ b/packages/markdown/index.html
@@ -12,7 +12,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5.29.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
     <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mermaid@10.9.0/dist/mermaid.min.js"></script>
 
     <style>
         #markdown-input {
@@ -272,6 +271,8 @@ fin
 
         const textarea = document.getElementById('markdown-input');
         const renderer = new Renderer(document.getElementById('content'));
+
+        window.renderer = renderer;
 
         function render() {
             //renderer.render(textarea.value);
