--- a/packages/compiler/index.html
+++ b/packages/compiler/index.html
@@ -119,7 +119,7 @@
                 "## JSON Data",
                 "Load data from a static JSON array.",
                 {
-                    "type": "table",
+                    "type": "tabulator",
                     "dataSourceName": "jsonData",
                     "variableId": "jsonTable",
                     "tabulatorOptions": {
@@ -136,7 +136,7 @@
                 "## CSV from URL",
                 "Load CSV data from a fixed URL.",
                 {
-                    "type": "table",
+                    "type": "tabulator",
                     "dataSourceName": "csvData",
                     "variableId": "csvTable",
                     "tabulatorOptions": {
@@ -162,7 +162,7 @@
                     ]
                 },
                 {
-                    "type": "table",
+                    "type": "tabulator",
                     "dataSourceName": "jsonUrlVariable",
                     "variableId": "jsonUrlTable",
                     "tabulatorOptions": {
@@ -179,7 +179,7 @@
                 "## Inline CSV Data",
                 "You can provide CSV data directly as a single string.",
                 {
-                    "type": "table",
+                    "type": "tabulator",
                     "dataSourceName": "inlineCsvData",
                     "variableId": "inlineCsvTable",
                     "tabulatorOptions": {
