--- a/packages/html-wrapper/html/html-markdown.html
+++ b/packages/html-wrapper/html/html-markdown.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{TITLE}}</title>
     <link rel="stylesheet" href="https://microsoft.github.io/chartifact/dist/v1/chartifact-toolbar.css" />
+    <script src="https://microsoft.github.io/chartifact/dist/v1/chartifact.toolbar.umd.js"></script>
     <script src="https://microsoft.github.io/chartifact/dist/v1/chartifact.sandbox.umd.js"></script>
 </head>
 
